--- a/style.css
+++ b/style.css
@@ -12,10 +12,42 @@ html {
 }
 
 .photobooth {
+  text-align: center;
+  margin-top: 20px;
   background: white;
   max-width: 150rem;
   margin: 2rem auto;
   border-radius: 2px;
+}
+
+#video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh; /* Adjust the height as needed */
+    background-color: #f1f1f1;
+    border: 2px solid #333;
+    border-radius: 5px;
+    overflow: hidden;
+}
+video {
+    width: 100%;
+    height: auto;
+}
+
+button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
 }
 
 /*clearfix*/
